feat: add link to see document

--- a/templates/annotations/document_info.html
+++ b/templates/annotations/document_info.html
@@ -19,9 +19,8 @@
                 <h2>Descripcion</h2>
                 <p>Autor: {{ document.author.name }}</p>
                 <p>Categoria: {{ document.category }}</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pellentesque eros elit, vitae cursus odio egestas et. Nullam vestibulum malesuada fermentum. Fusce lacus nibh, volutpat eu tempor pretium, feugiat nec odio. Praesent facilisis nibh ac tortor egestas, sed venenatis dolor volutpat. Duis vitae porttitor dolor. In quis pellentesque nunc. Phasellus et quam sit amet diam feugiat luctus. Sed in commodo leo. Etiam aliquam, purus sed luctus accumsan, eros quam aliquam tortor, eu feugiat massa leo efficitur justo. Fusce convallis lorem ac mi tempor, eget sodales lorem ornare. Morbi tincidunt convallis venenatis.</p>
                 <div class="text-center">
-                    <a role="button" href="#" class="btn btn-primary">Ver documento</a>
+                    <a role="button" href="annotations/book/{{ document.uid }}" class="btn btn-primary">Ver documento</a>
                 </div>
             </div>
         </div>
