--- a/templates/recommendation/recommended.html
+++ b/templates/recommendation/recommended.html
@@ -13,7 +13,7 @@
         <!-- Books recommended for category-->
         {% for book in recommendation.books %}
         <div class="col-md-3">
-            <a style="text-decoration: none; color: black" href="/annotations/book/{{ book.uid }}">  <!-- Change url to open book content-->
+            <a style="text-decoration: none; color: black" href="/document/{{ book.uid }}">  <!-- Change url to open book content-->
                 <div class="card">
                     <img src="" alt="coverImage" id="coverImage" data-path="{{ book.path }}" />
                 <div class="card-body">
