feat(online-library): Visualization and Annotation are now contected.

--- a/templates/annotations/document_info.html
+++ b/templates/annotations/document_info.html
@@ -20,7 +20,7 @@
                 <p>Autor: {{ document.author.name }}</p>
                 <p>Categoria: {{ document.category }}</p>
                 <div class="text-center">
-                    <a role="button" href="annotations/book/{{ document.uid }}" class="btn btn-primary">Ver documento</a>
+                    <a role="button" href="/annotations/book/{{ document.uid }}" class="btn btn-primary">Ver documento</a>
                 </div>
             </div>
         </div>
