--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'fa/css/all.min.css' %}">
     <title>Online Library</title>
-
+    <style>
+        .spacer {
+            height: 75px;
+            color: transparent;
+            content: "|";
+        }
+    </style>
     {% block pre-script %}
     {% endblock %}
 </head>
 <body>
-    <header class="p-2 bg-dark">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header class="fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-2">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
                     <i class="fa-solid fa-book-bookmark"></i>
@@ -62,8 +68,9 @@
                 </div>
             </div>
         </nav>
+        {% block breadcrum %}{% endblock %}
     </header>
-
+    <div class="spacer"></div>
     <!--Block of content -->
     {% block content %}
     {% endblock %}
