--- a/templates/collections/create.html
+++ b/templates/collections/create.html
@@ -13,7 +13,7 @@
             <textarea  name="description" class="form-control"></textarea>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" name="is_private">
+          <input class="form-check-input" type="checkbox" name="is_public">
           <label class="form-check-label" for="flexCheckDefault">
             Es público
           </label>
