fix: change document attribute path to url

--- a/templates/annotations/document_info.html
+++ b/templates/annotations/document_info.html
@@ -12,7 +12,7 @@
             <div class="col">
                 <h1>{{ document.title }}</h1>
                 <div>
-                    <img src="" alt="Portada del libro {{ document.title }}" id="coverImage" data-path="{{ document.path }}" />
+                    <img src="" alt="Portada del libro {{ document.title }}" id="coverImage" data-path="{{ document.url }}" />
                 </div>
             </div>
             <div class="col">
