--- a/templates/recommendation/form_preferences.html
+++ b/templates/recommendation/form_preferences.html
@@ -49,7 +49,7 @@
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" name="categorias[]" id="economia" value="ECONONOMY">
+                            <input class="form-check-input" type="checkbox" name="categorias[]" id="economia" value="ECONOMY">
                             <label class="form-check-label" for="economia">
                                 Economía
                             </label>
