feat: add link to user's profile in UI

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,9 @@
                                 {{ user.username|default:"nothing" }}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-lg-end">
+                                <li><a class="dropdown-item" href="/social/profile/{{ user.id }}">
+                                    Ver perfil
+                                </a></li>
                                 <li><a class="dropdown-item" href="/accounts/logout">
                                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
                                     Cerrar sesión
