--- a/templates/social/feed.html
+++ b/templates/social/feed.html
@@ -23,7 +23,7 @@
         <div class="box-body p-0">
 
 
-            {% for activity in user_profile.feed.all %}
+            {% for activity in feed %}
                 <div class=" p-3 d-flex align-items-center border-bottom osahan-post-header">
 
                     <div class="col-2 dropdown-list-image mr-3 d-flex align-items-center  justify-content-center">
