--- a/templates/upload/subirArticulo.html
+++ b/templates/upload/subirArticulo.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Agrega los estilos de Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <style>
-
-      /* Estilo para el elemento h1 con la clase "titulo-h1" en el cuerpo del documento */
+<style>
+    /* Estilo para el elemento h1 con la clase "titulo-h1" en el cuerpo del documento */
         .titulo-h1 {
             text-align: center;
             color: #333; /* Cambia el color del texto según tus preferencias */
@@ -109,9 +99,10 @@
             color: #fff;
             margin-left: 5px;
         }
-    </style>
-</head>
-<body>
+
+</style>
+{% extends 'base.html' %}
+{% block content %}
 <!--<h1 class="titulo-h1">Subir archivo</h1>-->
 <form action="" method="post" enctype="multipart/form-data"  class="container">
     <!-- Contenedor superior -->
@@ -120,7 +111,7 @@
         <img class="image img-fluid" src="https://th.bing.com/th/id/R.50ce2cd13ed2e7a732c57abe7ab19cf0?rik=7SUFzI9KU6IMOQ&riu=http%3a%2f%2f3.bp.blogspot.com%2f-ll15GKfuAfU%2fUD_QRuRT3SI%2fAAAAAAAAi-w%2f_VQ08qSDwAE%2fs1600%2fLibros-Viejos-Apilados_Imagenes-de-Libros.jpg&ehk=ITajz1yk%2bQeZz6zZHmcxf5Xbt89WsaenbI3pTQzlkcw%3d&risl=&pid=ImgRaw&r=0" alt="Imagen del libro">
         <!-- Campos de entrada -->
         <div class="input-container">
-            <input class="input-field form-control" type="text" placeholder="Título" name="title">
+            <input class="input-field form-control" type="text" placeholder="Titulo" name="title">
 
             <input class="input-field form-control" type="text" placeholder="Autor" name="author">
 
@@ -160,19 +151,5 @@
         </div>
     </div>
 </form>
-
-<!-- Agrega los scripts de Bootstrap JavaScript al final del cuerpo del documento -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Script para manejar el almacenamiento local del archivo seleccionado -->
-<script>
-    document.getElementById('fileInput').addEventListener('change', function (event) {
-        const selectedFile = event.target.files[0];
-        if (selectedFile) {
-            // Almacena el archivo seleccionado en el almacenamiento local del navegador
-            localStorage.setItem('selectedFile', JSON.stringify(selectedFile));
-        }
-    });
-</script>
-</body>
-</html>
+{% endblock %}
+```
