feat: add path in the base

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="/recommendations" id="recomendaciones">Recomendados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/upload/subirArticulo" id="publicar">Publicar</a>
+                            <a class="nav-link" href="articles/upload" id="publicar">Publicar</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/collections" id="colecciones">Colecciones</a>
