--- a/templates/annotations/general_notes.html
+++ b/templates/annotations/general_notes.html
@@ -3,7 +3,7 @@
 	<div class="row">
         {% for note in document_notes %}
             <div class="row border rounded bg-body-secondary">
-                <div class="col-3">{{ note.user }}</div>
+                <div class="col-3">{{ note.user.username }}</div>
                 <div class="col-3">{{ note.date }}</div>
             </div>
             <div class="row border rounded">
