--- a/templates/collections/collections.html
+++ b/templates/collections/collections.html
@@ -113,7 +113,29 @@
                 </a>
             </div>
         {% endfor %}
-    </div> 
+    </div>
+    <h1 class="pt-4  fs-1 text fw-bold">Otras colecciones</h1>
+    <div class="grid gap-3 pt-4">
+        {% for collection in external_collections %}
+            <div class="d-flex card flex-column align-items-center rounded-5 rounded-top-5 border border-1 border-secondary-subtle  p-0 rounded shadow">
+                <div class="img-container h-50 w-100 rounded-2 mb-3 bg-secondary">
+                    <img src="/static/img/library.jpg" alt="">
+                </div>
+                <p>{{ collection.user.username }}</p>
+                <span class="float-start badge rounded-pill  py-1 px-2 bg-info m-1">
+                    {{ collection.calc_score }}
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                <h2 class="text-center">{{ collection.name }} </h2>
+                <a href="/collections/{{ collection.id }}">
+                    <button class="btn btn-primary mx-2 pt-2 rounded-2 mt-2 text-white">
+                        Ver colección
+                        <i class="fa-solid fa-arrow-right-long"></i>
+                    </button>
+                </a>
+            </div>
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock %}
