feat(auth): register form included

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -70,6 +70,7 @@
                   <input type="password" class="form-control" id="exampleInputPassword1" name="password" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Ingresar</button>
+                <a href="/accounts/register/" class="mt-4 mb-4">¿Aún no tienes una cuenta? Registrate</a>
             </form>
         </div>
     </div>
