--- a/templates/recommendation/recommended.html
+++ b/templates/recommendation/recommended.html
@@ -7,6 +7,7 @@
 
 <!-- show recommended block-->
 {% extends 'base.html' %}
+{% block page %}recomendaciones{% endblock %}
 {% block content %}
 
     <div class="container mt-4">
