--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
                                 {{ user.username|default:"nothing" }}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-lg-end">
-                                <li><a class="dropdown-item" href="/social/profile/{{ user.id }}">
+                                <li><a class="dropdown-item" href="/social/profile/{{ user.username }}">
                                     Ver perfil
                                 </a></li>
                                 <li><a class="dropdown-item" href="/accounts/logout">
