revert: static img

--- a/templates/upload/visualizarInformacion.html
+++ b/templates/upload/visualizarInformacion.html
@@ -57,7 +57,7 @@
     <!-- Contenedor de información del libro -->
     <div class="book-info-container">
         <!-- Imagen del libro -->
-        <img class="book-image img-fluid" src="/img/library.jpg" alt="Imagen del libro" id="bookImage">
+        <img class="book-image img-fluid" src="/static/img/library.jpg" alt="Imagen del libro" id="bookImage">
 
         <!-- Campos de información del libro -->
         <h1 id="bookTitle">Título del Libro: {{ document.title }}</h1>
